# rust-nsfw-image-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  download_model.sh
models/: .gitkeep
src/: lib.rs  main.rs
src/errors/: app_errors.rs  mod.rs
src/handlers/: classify.rs  mod.rs  ping.rs
src/models/: classified.rs  mod.rs
src/services/: app.rs  classification.rs  classifier_trait.rs  mock_classifier.rs  mod.rs  nsfw_classifier.rs
tests/: classify_endpoint.rs
