[package]
name = "nsfw-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["multipart"]}
tokio = { version = "1", features = ["full"]}
tower = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "0.14"
http-body-util = "0.1"
nsfw = "0.2"
image = "0.25"
bytes = "1"
base64 = "0.21"
mime = "0.3"
async-trait = "0.1"
[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http = "0.2"